--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,9 @@ flask-cors = "*"
 gunicorn = "*"
 cloudinary = "*"
 flask-admin = "*"
+flask_jwt_extended = "*"
+werkzeug = "*"
+
 
 [requires]
 python_version = "3.8"
