--- a/package.json
+++ b/package.json
@@ -77,10 +77,12 @@
 	},
 	"dependencies": {
 		"bootstrap": "^4.3.1",
+		"google-map-react": "^2.1.10",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-bootstrap": "^1.6.1",
 		"react-dom": "^16.8.4",
+		"react-google-maps": "^9.4.5",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^5.2.0"
 	}
