--- a/package.json
+++ b/package.json
@@ -76,8 +76,10 @@
 		]
 	},
 	"dependencies": {
-		"bootstrap": "^4.3.1",
+		"bootstrap": "^4.6.0",
 		"google-map-react": "^2.1.10",
+		"jquery": "^3.6.0",
+		"popper.js": "^1.16.1",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-bootstrap": "^1.6.1",
