--- a/package.json
+++ b/package.json
@@ -76,12 +76,13 @@
 		]
 	},
 	"dependencies": {
+		"@popperjs/core": "^2.9.3",
 		"bootstrap": "^4.6.0",
 		"google-map-react": "^2.1.10",
-		"jquery": "^3.6.0",
-		"popper.js": "^1.16.1",
 		"i": "^0.3.6",
+		"jquery": "^3.6.0",
 		"npm": "^7.20.6",
+		"popper.js": "^1.16.1",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-bootstrap": "^1.6.1",
