--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
 		"react": "^16.8.4",
 		"react-bootstrap": "^1.6.1",
 		"react-dom": "^16.8.4",
+		"react-google-login": "^5.2.2",
 		"react-google-maps": "^9.4.5",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^5.2.0"
