--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
 	},
 	"dependencies": {
 		"@popperjs/core": "^2.9.3",
+		"@stripe/react-stripe-js": "^1.4.1",
+		"@stripe/stripe-js": "^1.17.1",
 		"bootstrap": "^4.6.0",
 		"google-map-react": "^2.1.10",
 		"i": "^0.3.6",
@@ -90,6 +92,7 @@
 		"react-google-login": "^5.2.2",
 		"react-google-maps": "^9.4.5",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^5.2.0"
+		"react-router-dom": "^5.2.0",
+		"stripe": "^8.170.0"
 	}
 }
