--- a/package.json
+++ b/package.json
@@ -91,6 +91,8 @@
 		"react-dom": "^16.8.4",
 		"react-google-login": "^5.2.2",
 		"react-google-maps": "^9.4.5",
+		"react-phone-input-2": "^2.14.0",
+		"react-phone-number-input": "^3.1.25",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^5.2.0",
 		"stripe": "^8.170.0"
