--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
 		"react-phone-number-input": "^3.1.25",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^5.2.0",
+		"react-select": "^4.3.1",
 		"stripe": "^8.170.0"
 	}
 }
