--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"google-map-react": "^2.1.10",
 		"i": "^0.3.6",
 		"jquery": "^3.6.0",
+		"jwt-decode": "^3.1.2",
 		"npm": "^7.20.6",
 		"popper.js": "^1.16.1",
 		"prop-types": "^15.7.2",
