--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
 		"i": "^0.3.6",
 		"jquery": "^3.6.0",
 		"jwt-decode": "^3.1.2",
+		"moment": "^2.29.1",
 		"npm": "^7.20.6",
 		"popper.js": "^1.16.1",
 		"prop-types": "^15.7.2",
