--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
 		"prop-types": "^15.7.2",
 		"react": "^16.14.0",
 		"react-bootstrap": "^1.6.1",
+		"react-carousel-minimal": "^1.4.1",
 		"react-dom": "^16.14.0",
 		"react-google-login": "^5.2.2",
 		"react-google-maps": "^9.4.5",
